--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Portfolio
+name: The Learning Loop
 
 # Name of the author
 author: Nimeesha Pachipulusu
@@ -12,7 +12,7 @@ author: Nimeesha Pachipulusu
 description: Portfolio and more
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-# avatar: /images/reverie.png
+avatar: /images/reverie.png
 
 #
 # Flags below are optional
@@ -29,7 +29,7 @@ footer-links:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: 
+  # twitter: 
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
