--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: The Learning Loop
+name: Mlops with Nim
 
 # Name of the author
 author: Nimeesha Pachipulusu
 
 # Short bio or description (displayed in the header)
-description: Portfolio and more
+description: Mlops and more
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
